# VidMcp

./: .env.example  .gitignore  LICENSE  Makefile  README.md  UPGRADE_ROADMAP.md  pyproject.toml  server.json
configs/: claude_desktop.json
examples/: advanced_harness_demo.py  cyberpunk_edit.py  education_lesson_demo.py  math_lesson_demo.py  ultimate_platform_demo.py  v05_enhance_demo.py  v06_platform_demo.py
examples/marketplace_recipes/: neon_classroom.json
marketing/: LAUNCH.md
scripts/: edit_dimensions_pro.py  edit_dimensions_talk.py  edit_dimensions_vfx.py  edit_time_dilation.py  edit_time_dilation_v2.py  generate_samples.py  install_local_mcp.sh  render_4d_explainer.py
site/: .htaccess  404.html  HOSTINGER.txt  index.html  robots.txt  sitemap.xml
site/css/: style.css
site/js/: main.js
src/vidmcp/: __init__.py  __main__.py  config.py  models_registry.py  server.py
src/vidmcp/advanced/: __init__.py  causal_graph.py  lighting_match.py  otio_export.py  shot_detect.py  uncertainty.py  world_bg.py
src/vidmcp/agents/: __init__.py  creative.py  critic.py  debate.py  edit_plan.py  orchestrator.py  planner.py  rewatch.py
src/vidmcp/audio/: __init__.py  bgm.py  course.py  diarize.py  dubbing.py  loudness.py  media.py  music.py  process.py  semantic.py  sfx.py  speech_lock.py  tracks.py  whisper_timeline.py
src/vidmcp/camera/: __init__.py  moves.py  reframe.py  stabilize.py  timewarp.py
src/vidmcp/captions/: __init__.py  burn.py  fonts.py  styles.py
src/vidmcp/color/: __init__.py  auto_correct.py  grade.py  lut.py  match.py  scopes.py
src/vidmcp/compositor/: __init__.py  alpha.py  engine.py  ffmpeg_ops.py  realism.py
src/vidmcp/core/: __init__.py  events.py  framecache.py  job_manager.py  security.py  workspace.py
src/vidmcp/critics/: __init__.py  ensemble.py
tests/integration/: test_education_path.py  test_harness_pipeline.py  test_math_lesson_and_refine.py  test_pipeline_mock.py  test_ultimate_stack.py
tests/unit/: test_bgm.py  test_captions.py  test_export_presets.py  test_fast_matte.py  test_harness_gates.py  test_mask_ops.py  test_mlx_and_fast_harness.py  test_orientation.py  test_packs_and_compact.py  test_planner.py  test_process_audio.py  test_project_store.py  test_scenes_and_refine.py  test_schemas.py  test_smart_cut.py  test_v05_enhancements.py  test_v06_platform.py  test_v2_core.py  test_viddsl_and_causal.py
(+111 files in other folders)
