[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vidmcp"
version = "1.0.2"
description = "AI video editing MCP server — SAM 3.1 segmentation, behind-the-subject VFX, education scenes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Dhiraj Lochib", email = "dhirajch145@gmail.com" }]
keywords = ["mcp", "video", "sam3", "vfx", "ai", "education", "segmentation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "mcp>=1.6.0",
  "fastmcp>=2.0.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "numpy>=1.26",
  "opencv-python-headless>=4.9",
  "Pillow>=10.3",
  "ffmpeg-python>=0.2.0",
  "av>=12.0",
  "httpx>=0.27",
  "rich>=13.7",
  "structlog>=24.1",
  "tenacity>=8.3",
  "orjson>=3.10",
  "filelock>=3.15",
  "typing-extensions>=4.12",
  "uuid6>=2024.7.10",
]

[project.optional-dependencies]
mlx = ["mlx>=0.20", "mlx-vlm==0.4.3", "huggingface_hub>=0.24"]
sam = ["ultralytics>=8.3.237", "torch>=2.2", "torchvision>=0.17", "huggingface_hub>=0.24"]
scenes = ["manim>=0.18.0"]
asr = ["faster-whisper>=1.0.0"]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.5", "build>=1.2", "twine>=5.0"]
all = ["vidmcp[sam,dev,scenes,asr,mlx]"]

[project.scripts]
vidmcp = "vidmcp.__main__:main"
vidmcp-server = "vidmcp.__main__:main"

[project.urls]
Homepage = "https://vidmcp.com"
Documentation = "https://github.com/dhirajlochib/VidMcp#readme"
Repository = "https://github.com/dhirajlochib/VidMcp"
Issues = "https://github.com/dhirajlochib/VidMcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vidmcp"]

[tool.hatch.build.targets.sdist]
include = ["src/vidmcp", "configs", "server.json", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
